app/routes/overview/components/Overview.css
@import '~app/styles/variables.css';

.tagline {
  display: inline-block;
  white-space: nowrap;
  vertical-align: middle;
  overflow: auto;
  height: 28px;
  width: 340px;
  margin: 0;
}

.tag {
  background-color: var(--color-mono-gray-4) !important;
}

.dot {
  margin: 0 5px;
  font-weight: 1000;
}

.header {
  padding: 0 0 0 10px;
  flex: 1;
  width: 100%;
  color: var(--color-dark-mono-gray-2);
  text-transform: uppercase;
  font-weight: 400;
  letter-spacing: 1px;

  @media (--mobile-device) {
    padding: 0;
    margin-left: 10px;
  }
}

.leftColumn {
  flex: 13;
  margin-right: 10px;
  padding: 0 20px;
}

.rightColumn {
  flex: 7;
}

.readMe {
  padding: 28px 0 0;
}

.itemInfo {
  transition: color 0.2s;
  font-size: 1rem;
  font-weight: 600;
  color: rgba(var(--rgb-min), var(--rgb-min), var(--rgb-min), 0.8);
}

.item:hover .itemInfo {
  color: black;
}

.otherItems {
  display: flex;
  padding: 0 10px;

  @media (--mobile-device) {
    flex-direction: column;
  }
}

.events {
  display: flex;
  justify-content: flex-start;
  flex-flow: column wrap;

  @media (--mobile-device) {
    margin-right: 0;
  }
}

.articles {
  display: flex;
  justify-content: space-between;
  flex-flow: row wrap;
}

.weeklyArticles {
  border: 1px solid rgba(var(--rgb-min), var(--rgb-min), var(--rgb-min), 0.09);
  box-shadow: 0 1px 4px
    rgba(var(--rgb-min), var(--rgb-min), var(--rgb-min), 0.04);
  border-radius: 3px;
  background: var(--lego-card-color);

  @media (--mobile-device) {
    height: auto;
    max-height: 495px;
  }
}

.quote {
  composes: withShadow from '~app/styles/utilities.css';
  background: var(--lego-card-color);
  padding: 15px 20px 8px;
}

@media only screen and (max-width: 855px) {
  .weeklyArticles {
    height: auto;
    max-height: 659px;
  }
}

@-moz-document url-prefix() {
  .content {
    height: 490px;
    flex: none;
  }
}

.showMore {
  display: flex;
  justify-content: center;
  cursor: pointer;
}

.desktopContainer {
  display: flex;

  @media (--mobile-device) {
    display: none;
  }
}

.mobileContainer {
  display: none;

  @media (--mobile-device) {
    display: grid;
  }
}

